--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ disqus:
   shortname:  kensblog-1
 
 ## Google Analytics ##
-# ga_tracking_id:  #Google analytics id for the site
+  ga_tracking_id:  UA-110802444-2
 
 ## Reading quantity (LeanCloud) ##
 leancloud:
